callsign value added

--- a/links/aircraft-register.html
+++ b/links/aircraft-register.html
@@ -35,6 +35,8 @@
         <input type="text" id="model" required>
         <label for="tailNumber">Tail Number:</label>
         <input type="text" id="tailNumber" required>
+        <label for="callsign">Callsign:</label>
+        <input type="text" id="callsign" required>
         <label for="owner">Owner:</label>
         <select id="owner">
         </select>
