placeholder login impl

--- a/links/login.html
+++ b/links/login.html
@@ -24,7 +24,7 @@
             <input type="text" id="login" style="width:200px;margin-top:10px;" required />
             <label for="password">Password:</label>
             <input type="text" id="password" style="width:200px" required />
-            <button onclick="requestLogin()" class="button">Login</button>
+            <button onclick="requestLogin('/login')" class="button">Login</button>
     </div>
 
     <footer><span id="currentLSHour"></span> - SAN ANDREAS AVIATION ADMINISTRATION &copy; All rights reserved
