--- a/links/aircraft-register.html
+++ b/links/aircraft-register.html
@@ -29,6 +29,7 @@
 
     <br>
     <div class="section-element">
+        <span class="section-title">Aircraft Information</span>
         <label for="brand">Brand:</label>
         <input type="text" id="brand" required>
         <label for="model">Model:</label>
