--- a/links/login.html
+++ b/links/login.html
@@ -23,7 +23,7 @@
             <label for="login" style="margin-top:10px;">Username:</label>
             <input type="text" id="login" style="width:200px;margin-top:10px;" required />
             <label for="password">Password:</label>
-            <input type="text" id="password" style="width:200px" required />
+            <input type="password" id="password" style="width:200px" required />
             <button onclick="requestLogin('/login')" class="button">Login</button>
     </div>
 
