--- a/links/person-register.html
+++ b/links/person-register.html
@@ -28,6 +28,7 @@
 
     <br>
     <div class="section-element">
+        <span class="section-title">Company/Person Information</span>
         <label for="name">Name:</label>
         <input type="text" id="name" required>
         <label for="representative">Representative:</label>
