--- a/aircrafts/records.html
+++ b/aircrafts/records.html
@@ -18,10 +18,10 @@
         <h3>
             <div class="links">
                 <a href="../index.html">Home</a>
-                <a href="person-records.html">Person Records</a>
-                <a class="active" href="aircraft-records.html">Aircraft Records</a>
-                <a href="aircraft-register.html">Register Aircraft</a>
-                <a href="person-register.html">Register Person</a>
+                <a href="../persons/records.html">Person Records</a>
+                <a class="active" href="records.html">Aircraft Records</a>
+                <a href="register.html">Register Aircraft</a>
+                <a href="../persons/register.html">Register Person</a>
             </div>
         </h3>
     </header>
@@ -37,7 +37,7 @@
     <br>
     <div id="results" class="records">
     </div>
-    
+
     <br>
     <footer><span id="currentLSHour"></span> - SAN ANDREAS AVIATION ADMINISTRATION &copy; All rights reserved</footer>
     <script type="text/javascript" src="../scripts/records.js"></script>
