--- a/aircrafts/register.html
+++ b/aircrafts/register.html
@@ -6,7 +6,7 @@
     <link rel="stylesheet" href="../styles/register.css" />
     <link rel="icon" type="image/x-icon" href="../favicon.png" />
     <script src="../scripts/index.js"></script>
-    <title>Register Aircrafts - San Andreas Aviation Administration</title>
+    <title>Aircrafts - San Andreas Aviation Administration</title>
     <meta charset="UTF-8" />
 </head>
 
@@ -14,14 +14,14 @@
     <header>
         <a href="../index.html"><img src="../images/saaa.png" height="100" width="100" alt="logo" /></a>
         <h1>SAN ANDREAS AVIATION ADMINISTRATION</h1>
-        <h2>Register Aircrafts</h2>
+        <h2>Aircraft Registration</h2>
         <h3>
             <div class="links">
                 <a href="../index.html">Home</a>
-                <a href="person-records.html">Person Records</a>
-                <a href="aircraft-records.html">Aircraft Records</a>
-                <a class="active" href="aircraft-register.html">Register Aircraft</a>
-                <a href="person-register.html">Register Person</a>
+                <a href="../persons/records.html">Person Records</a>
+                <a href="records.html">Aircraft Records</a>
+                <a class="active" href="register.html">Register Aircraft</a>
+                <a href="../persons/register.html">Register Person</a>
             </div>
         </h3>
         <br>
