--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
 <head>
     <link rel="stylesheet" href="styles.css" />
     <link rel="stylesheet" href="styles/index.css" />
+    <link rel="stylesheet" href="styles/dropdown.css" />
     <link rel="icon" type="image/x-icon" href="favicon.png" />
     <script src="/scripts/index.js" type="text/javascript"></script>
     <title>San Andreas Aviation Administration</title>
@@ -17,6 +18,9 @@
         <h3>103 New Empire Way<br>
             Los Santos, S.A. 20591</h3>
     </header>
+
+<!-- Redo the index to show relevant information on the page itself while adding the navigation menu in the header -->
+<!-- Remove dropdown menu, doesn't fit -->
 
     <br><br>
     <div class="buttons">
