--- a/persons/records.html
+++ b/persons/records.html
@@ -18,10 +18,10 @@
         <h3>
             <div class="links">
                 <a href="../index.html">Home</a>
-                <a class="active" href="person-records.html">Person Records</a>
-                <a href="aircraft-records.html">Aircraft Records</a>
-                <a href="aircraft-register.html">Register Aircraft</a>
-                <a href="person-register.html">Register Person</a>
+                <a class="active" href="records.html">Person Records</a>
+                <a href="../aircrafts/records.html">Aircraft Records</a>
+                <a href="../aircrafts/register.html">Register Aircraft</a>
+                <a href="register.html">Register Person</a>
             </div>
         </h3>
     </header>
