--- a/persons/register.html
+++ b/persons/register.html
@@ -13,14 +13,14 @@
     <header>
         <a href="../index.html"><img src="../images/saaa.png" height="100" width="100" alt="logo" /></a>
         <h1>SAN ANDREAS AVIATION ADMINISTRATION</h1>
-        <h2>Register Persons</h2>
+        <h2>Person Registration</h2>
         <h3>
             <div class="links">
                 <a href="../index.html">Home</a>
-                <a href="person-records.html">Person Records</a>
-                <a href="aircraft-records.html">Aircraft Records</a>
-                <a href="aircraft-register.html">Register Aircraft</a>
-                <a class="active" href="person-register.html">Register Person</a>
+                <a href="records.html">Person Records</a>
+                <a href="../aircrafts/records.html">Aircraft Records</a>
+                <a href="../aircrafts/register.html">Register Aircraft</a>
+                <a class="active" href="register.html">Register Person</a>
             </div>
         </h3>
         <br>    
